- [x] Crear un shell para el servidor federado que permita administrar los nodos desde la consola el proyecto se debe llamar jettra-federated-shell y debe estar a nivel de jettra-server y documentar en el archivo federated.md como se usa. Este shell debe permitir ver todos los servidores federados su estatus, detener un servidor federado, ver cual es el servidor federado lider y los nodos que pertenecen al servidor federado.
-[x] Una vez dentro, escriba help para ver la lista de comandos disponibles. Por defecto, intentará conectarse a http://localhost:9000.


- [x] Organizar los directorios sh y log